objects/Absenteeism__c.object
<CustomObject>
    <fields>
        <fullName>Absenteen_Date__c</fullName>
        <label>Absenteen Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Employee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Employee</label>
        <referenceTo>Employee__c</referenceTo>
        <relationshipName>Illness_Histories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Illness_Description__c</fullName>
        <label>Illness Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Illness__c</fullName>
        <label>Illness</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legal_Affaires_Description__c</fullName>
        <label>Legal Affaires Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Legal_Affaires__c</fullName>
        <label>Legal Affaires</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Ilness</fullName>
                </value>
                <value>
                    <fullName>Accident - Not Work Related</fullName>
                </value>
                <value>
                    <fullName>Legal Affairs</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Absenteeism Common Contingences</label>
    <nameField>
        <displayFormat>AR-{0000}</displayFormat>
        <label>Absenteeism Ref</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Absenteeisms Commons Contingences</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>